--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -1,23 +1,16 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
-{% load dynamic_question_tags %}
+{% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <h2 class="margin-bottom-05">
+    Is your organization an election office?
+  </h2>
+{% endblock %}
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
+
+{% block form_fields %}
   {% csrf_token %}
-  <fieldset id="election_board__fieldset" class="usa-fieldset">
-    <legend>
-      <h2 class="margin-bottom-05">Is your organization an election office?</h2>
-      <p> This question is required.</p>
-    </legend>
-    {% radio_buttons_by_value forms.0.is_election_board as choices %}
-    {% for choice in choices.values %}
-      {% include "includes/radio_button.html" with choice=choice tile="true" required="true"%}
-    {% endfor %}
-  </fieldset>
-
-  {{ block.super }}  
-
-</form>
+  {% with add_class="usa-radio__input--tile" %}
+    {% input_with_errors forms.0.is_election_board %}
+  {% endwith %}
 {% endblock %}
