--- a/src/registrar/templates/application_authorizing_official.html
+++ b/src/registrar/templates/application_authorizing_official.html
@@ -1,28 +1,27 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
-{% load static %}
 {% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <h2 class="margin-bottom-05">
+    Who is the authorizing official for your organization?
+  </h2>
 
-<h2>Who is the authorizing official for your organization?</h2>
-
-<div id="instructions">
-  <p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an authorizing official</a>.
-  </p>
+  <p>Your authorizing official is the person within your organization who can authorize
+  your domain request. This is generally the highest ranking or highest elected official
+  in your organization. Read more about <a href="{% url 'todo' %}">who can serve as an
+  authorizing official</a>.</p>
 
   <div class="ao_example">
     {% include "includes/ao_example.html" %}
   </div>
 
-  <p>We’ll contact your authorizing official to let them know that you made this request and to double check that they approve it.</p> 
-</div>
+  <p>We’ll contact your authorizing official to let them know that you made this request
+  and to double check that they approve it.</p>
+{% endblock %}
 
-{% include "includes/required_fields.html" %}
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
+{% block form_fields %}
   {% csrf_token %}
-
   <fieldset class="usa-fieldset">
     <legend class="usa-sr-only">
       Who is the authorizing official for your organization?
@@ -38,12 +37,9 @@
 
     {% input_with_errors forms.0.email %}
 
-    {% input_with_errors forms.0.phone add_class="usa-input--medium" %}
+    {% with add_class="usa-input--medium" %}
+      {% input_with_errors forms.0.phone %}
+    {% endwith %}
+
   </fieldset>
-
-
-  {{ block.super }}
-
-</form>
-
 {% endblock %}
