--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -1,31 +1,24 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks field_helpers %}
 {% load static %}
+{% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <p>Enter your organization’s public website, if you have one. For example,
+  www.city.com.</p>
+{% endblock %}
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
+
+{% block form_fields %}
   {% csrf_token %}
-  <div>
-    {{ forms.0.management_form }}
-    {# TODO: aria-describedby to associate these instructions with the input! #}
-    <p id="website_instructions">
-      Enter your organization’s public website, if you have one. For example, www.city.com.
-    </p>
-    {% for form in forms.0 %}
-      {% input_with_errors form.website %}
-    {% endfor %}
+  {{ forms.0.management_form }}
 
-    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
-      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
-        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
-      </svg><span class="margin-left-05">Add another site</span>
-    </button>
-  </div>
-  <div>
+  {% for form in forms.0 %}
+    {% input_with_errors form.website %}
+  {% endfor %}
 
-  {{ block.super }}
-
-</form>
-
+  <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+    <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+      <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+    </svg><span class="margin-left-05">Add another site</span>
+  </button>
 {% endblock %}
