--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -1,41 +1,48 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
 {% load static %}
 {% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <p>We’d like to contact other employees with administrative or technical
+  responsibilities in your organization. For example, they could be involved in
+  managing your organization or its technical infrastructure. This information will
+  help us assess your eligibility and understand the purpose of the .gov domain. These
+  contacts should be in addition to you and your authorizing official.</p>
+{% endblock %}
 
-<p id="instructions">We’d like to contact other employees with administrative or technical responsibilities in your organization. For example, they could be involved in managing your organization or its technical infrastructure. This information will help us assess your eligibility and understand the purpose of the .gov domain. These contacts should be in addition to you and your authorizing official. </p>
-{% include "includes/required_fields.html" %}
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
+{% block form_fields %}
   {% csrf_token %}
   {{ forms.0.management_form }}
   {# forms.0 is a formset and this iterates over its forms #}
   {% for form in forms.0.forms %}
     <fieldset class="usa-fieldset">
       <legend>
-        <h2 class="margin-bottom-05">Contact {{ forloop.counter }}</h2>
+        <h2>Contact {{ forloop.counter }}</h2>
       </legend>
+
+      {% if form.is_bound %}HAS INITIAL DATA{% else %}NO INITIAL DATA{% endif %}
+
       {% input_with_errors form.first_name %}
+
       {% input_with_errors form.middle_name %}
+
       {% input_with_errors form.last_name %}
+
       {% input_with_errors form.title %}
+
       {% input_with_errors form.email %}
-      {% input_with_errors form.phone add_class="usa-input--medium" %}
+
+      {% with add_class="usa-input--medium" %}
+        {% input_with_errors form.phone %}
+      {% endwith %}
+
     </fieldset>
   {% endfor %}
 
-  <div>
-    <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
-      <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
-        <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
-      </svg><span class="margin-left-05">Add another contact</span>
-    </button>
-  </div>
-
-  {{ block.super }}
-
-</form>
-
+  <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
+    <svg class="usa-icon" aria-hidden="true" focusable="false" role="img" width="24" height="24">
+      <use xlink:href="{%static 'img/sprite.svg'%}#add_circle"></use>
+    </svg><span class="margin-left-05">Add another contact</span>
+  </button>
 {% endblock %}
