--- a/src/registrar/templates/application_requirements.html
+++ b/src/registrar/templates/application_requirements.html
@@ -1,159 +1,195 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
+{% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <p>The .gov domain exists to support a broad diversity of government missions and
+  public initiatives. Generally, the .gov registry does not review or audit how
+  government organizations use their domains. However, misuse of an individual .gov
+  domain can reflect upon the integrity of the entire .gov space. There are categories
+  of misuse that are statutorily prohibited or abusive in nature.</p>
 
-<p>The .gov domain exists to support a broad diversity of government missions and public initiatives. Generally, the .gov registry does not review or audit how government organizations use their domains. However, misuse of an individual .gov domain can reflect upon the integrity of the entire .gov space. There are categories of misuse that are statutorily prohibited or abusive in nature.</p>
+  <h2>Prohibited activities for .gov domains</h2>
 
-<h2>Prohibited activities for .gov domains</h2>
+  <h3>Commercial purposes </h3>
 
-<h3>Commercial purposes </h3>
-<p>A .gov domain must not be used for commercial purposes, such as advertising benefitting private individuals or entities.</p>
+  <p>A .gov domain must not be used for commercial purposes, such as advertising
+  benefitting private individuals or entities.</p>
 
-<h3>Political campaigns</h3>
-<p>A .gov domain must not be used for political campaigns.</p>
+  <h3>Political campaigns</h3>
 
-<h3>Illegal content</h3>
-<p>A .gov domain must not be used to distribute or promote material whose distribution violates applicable law.</p>
+  <p>A .gov domain must not be used for political campaigns.</p>
 
-<h3>Malicious cyber activity </h3>
-<p>.Gov is a trusted and safe space. .Gov domains must not distribute malware, host open redirects, or otherwise engage in malicious cyber activity.</p>
+  <h3>Illegal content</h3>
+
+  <p>A .gov domain must not be used to distribute or promote material whose distribution
+  violates applicable law.</p>
+
+  <h3>Malicious cyber activity </h3>
+
+  <p>.Gov is a trusted and safe space. .Gov domains must not distribute malware, host
+  open redirects, or otherwise engage in malicious cyber activity.</p>
+
+  <h2>Required activities for .gov domain registrants </h2>
+
+  <h3>Keep your contact information updated</h3>
+
+  <p>As a .gov domain registrant, maintain current and accurate contact information in the
+  .gov registrar. We strongly recommend that you create and use a security contact.</p>
+
+  <h3>Be responsive if we contact you</h3>
+
+  <p>Registrants should respond in a timely manner to communications about required and
+  prohibited activities.</p>
+
+  <h2>Domains can be suspended or terminated for violations</h2>
+
+  <p>The .gov program may need to suspend or terminate a domain registration for
+  violations. Registrants should respond in a timely manner to communications about
+  prohibited activities.</p>
+
+  <p>When we discover a violation, we will make reasonable efforts to contact a
+  registrant, including:
+    <ul class="usa-list"> 
+      <li>Emails to domain contacts </li>
+      <li>Phone calls to domain contacts</li>
+      <li>Email or phone call to the authorizing official</li>
+      <li>Emails or phone calls to the government organization, a parent organization,
+        or affiliated entities</li>
+    </ul>
+  </p>
+
+  <p>We understand the critical importance of the availability of .gov domains.
+  Suspending or terminating a .gov domain is reserved only for prolonged, unresolved
+  serious violations where the registrant is non-responsive. We will make extensive
+  efforts to contact registrants and to identify potential solutions, and will make
+  reasonable accommodations for remediation timelines proportional to the severity of
+  the issue.</p>
+
+  <h2>Requirements for authorizing officials</h2>
+
+  <p>Your authorizing official is the person within your organization who can authorize
+  your domain request. This is generally the highest ranking or highest elected official
+  in your organization.</p>
+
+  <h3>Executive branch federal agencies</h3>
+
+  <p>Domain requests from executive branch agencies must be authorized by CIOs or agency
+  heads.</p> 
+
+  <p>Domain requests from executive branch agencies are subject to guidance issued by
+  the U.S. Office of Management and Budget.</p>
+
+  <h3>Judicial branch federal agencies</h3>
+
+  <p>Domain requests for judicial branch agencies, except the U.S. Supreme Court, must
+  be authorized by the director or CIO of the Administrative Office (AO) of the United
+  States Courts.</p>
+
+  <p>Domain requests from the U.S. Supreme Court must be authorized by the director of
+  information technology for the U.S. Supreme Court.</p>
+
+  <h3>Legislative branch federal agencies</h3>
+
+  <h4>U.S. Senate</h4>
+
+  <p>Domain requests from the U.S. Senate must come from the Senate Sergeant at Arms.</p>
+
+  <h4>U.S. House of Representatives</h4>
+
+  <p>Domain requests from the U.S. House of Representatives must come from the House
+  Chief Administrative Officer.</p>
+
+  <h4>Other legislative branch agencies</h4>
+
+  <p>Domain requests from legislative branch agencies must come from the agency’s head
+  or CIO.</p>
+
+  <p>Domain requests from legislative commissions must come from the head of the
+  commission, or the head or CIO of the parent agency, if there is one.</p>
+
+  <h3>Interstate</h3>
+
+  <p>Domain requests from interstate organizations must be authorized by the
+  highest-ranking executive (president, director, chair, or equivalent) or one of the
+  state’s governors or CIOs.</p>
+
+  <h3>U.S. states and territories</h3>
+
+  <h4>States and territories: executive branch</h4>
+
+  <p>Domain requests from states and territories must be authorized by the governor or
+  the state CIO.</p>
+
+  <h4>States and territories: judicial and legislative branches</h4>
+
+  <p>Domain requests from state legislatures and courts must be authorized by an
+  agency’s CIO or highest-ranking executive.</p>
+
+  <h3>Tribal governments</h3>
+
+  <p>Domain requests from federally-recognized tribal governments must be authorized by
+  tribal chiefs as noted by the
+  <a href="https://www.bia.gov/service/tribal-leaders-directory">Bureau of Indian
+  Affairs</a>.</p>
+
+  <h3>Counties</h3>
+
+  <p>Domain requests from counties must be authorized by the chair of the county
+  commission or the equivalent highest elected official.</p>
+
+  <h3>Cities</h3>
+
+  <p>Domain requests from cities must be authorized by the mayor or the equivalent
+  highest elected official.</p>
+
+  <h3>Special districts</h3>
+
+  <p>Domain requests from special districts must be authorized by the highest-ranking
+  executive (president, director, chair, or equivalent) or state CIOs for state-based
+  organizations.</p>
+
+  <h3>School districts</h3>
+
+  <p>Domain requests from school district governments must be authorized by the highest-ranking
+  executive (the chair of a school district’s board or a superintendent).</p>
+
+  <h2>Requirements for .gov domain names</h2>
+
+  <p>.Gov domains must:
+    <ul class="usa-list"> 
+      <li>Be available</li>
+      <li>Be unique</li>
+      <li>Relate to your organization’s name, location, and/or services</li>
+      <li>Be clear to the general public. Your domain name must not be easily confused
+        with other organizations.</li>
+    </ul>
+  </p>
+
+  <h2>HSTS preloading</h2>
+
+  <p>The .gov program will preload all newly registered .gov domains for HTTP Strict
+  Transport Security (HSTS).</p> 
+
+  <p>HSTS is a simple and widely-supported standard that protects visitors by ensuring
+  that their browsers always connect to a website over HTTPS. HSTS removes the need to
+  redirect users from http:// to https:// URLs. (This redirection is a security risk
+  that HSTS eliminates.)</p>
+
+  <p>HSTS preloading impacts web traffic only. Once a domain is on the HSTS preload
+  list, modern web browsers will enforce HTTPS connections for all websites hosted on
+  the .gov domain. Users will not be able to click through warnings to reach a site.
+  Non-web uses of .gov (email, VPN, APIs, etc.) are not affected.</p>
+{% endblock %}
 
 
-<h2>Required activities for .gov domain registrants </h2>
-
-<h3>Keep your contact information updated</h3>
-<p>As a .gov domain registrant, maintain current and accurate contact information in the .gov registrar. We strongly recommend that you create and use a security contact.</p>
-
-<h3>Be responsive if we contact you</h3>
-<p>Registrants should respond in a timely manner to communications about required and prohibited activities.</p>
-
-
-<h2>Domains can be suspended or terminated for violations</h2>
-<p>The .gov program may need to suspend or terminate a domain registration for violations. Registrants should respond in a timely manner to communications about prohibited activities.</p>
-<p>When we discover a violation, we will make reasonable efforts to contact a registrant, including:
-<ul class="usa-list"> 
-  <li>Emails to domain contacts </li>
-  <li>Phone calls to domain contacts</li>
-  <li>Email or phone call to the authorizing official</li>
-  <li>Emails or phone calls to the government organization, a parent organization, or affiliated entities</li>
-</ul>
-</p>
-
-<p>We understand the critical importance of the availability of .gov domains. Suspending or terminating a .gov domain is reserved only for prolonged, unresolved serious violations where the registrant is non-responsive. We will make extensive efforts to contact registrants and to identify potential solutions, and will make reasonable accommodations for remediation timelines proportional to the severity of the issue.</p>
-
-<h2>Requirements for authorizing officials</h2>
-
-<p>Your authorizing official is the person within your organization who can authorize your domain request. This is generally the highest ranking or highest elected official in your organization.</p>
-
-<h3>Executive branch federal agencies</h3>
-
-<p>Domain requests from executive branch agencies must be authorized by CIOs or agency heads.</p> 
-
-<p>Domain requests from executive branch agencies are subject to guidance issued by the U.S. Office of Management and Budget.</p>
-
-<h3>Judicial branch federal agencies</h3>
-
-<p>Domain requests for judicial branch agencies, except the U.S. Supreme Court, must be authorized by the director or CIO of the Administrative Office (AO) of the United States Courts.</p>
-
-<p>Domain requests from the U.S. Supreme Court must be authorized by the director of information technology for the U.S. Supreme Court.</p>
-
-<h3>Legislative branch federal agencies</h3>
-
-<h4>U.S. Senate</h4>
-
-<p>Domain requests from the U.S. Senate must come from the Senate Sergeant at Arms.</p>
-
-<h4>U.S. House of Representatives</h4>
-
-<p>Domain requests from the U.S. House of Representatives must come from the House Chief Administrative Officer.</p>
-
-<h4>Other legislative branch agencies</h4>
-
-<p>Domain requests from legislative branch agencies must come from the agency’s head or CIO.</p>
-
-<p>Domain requests from legislative commissions must come from the head of the commission, or the head or CIO of the parent agency, if there is one.</p>
-
-<h3>Interstate</h3>
-
-<p>Domain requests from interstate organizations must be authorized by the highest-ranking executive (president, director, chair, or equivalent) or one of the state’s governors or CIOs.</p>
-
-<h3>U.S. states and territories</h3>
-
-<h4>States and territories: executive branch</h4>
-
-<p>Domain requests from states and territories must be authorized by the governor or the state CIO.</p>
-
-<h4>States and territories: judicial and legislative branches</h4>
-
-<p>Domain requests from state legislatures and courts must be authorized by an agency’s CIO or highest-ranking executive.</p>
-
-<h3>Tribal governments</h3>
-
-<p>Domain requests from federally-recognized tribal governments must be authorized by tribal chiefs as noted by the <a href="https://www.bia.gov/service/tribal-leaders-directory">Bureau of Indian Affairs</a>.</p>
-
-<h3>Counties</h3>
-
-<p>Domain requests from counties must be authorized by the chair of the county commission or the equivalent highest elected official.</p>
-
-<h3>Cities</h3>
-
-<p>Domain requests from cities must be authorized by the mayor or the equivalent highest elected official.</p>
-
-<h3>Special districts</h3>
-
-<p>Domain requests from special districts must be authorized by the highest-ranking executive (president, director, chair, or equivalent) or state CIOs for state-based organizations.</p>
-
-<h3>School districts</h3>
-
-<p>Domain requests from school district governments must be authorized by the highest-ranking executive (the chair of a school district’s board or a superintendent).</p>
-
-<h2>Requirements for .gov domain names</h2>
-<p>.Gov domains must:</p>
-<ul class="usa-list"> 
-  <li>Be available</li>
-  <li>Be unique</li>
-  <li>Relate to your organization’s name, location, and/or services</li>
-  <li>Be clear to the general public. Your domain name must not be easily confused with other organizations.</li>
-</ul>
-
-
-<h2>HSTS preloading</h2>
-<p>The .gov program will preload all newly registered .gov domains for HTTP Strict Transport Security (HSTS).</p> 
-<p>HSTS is a simple and widely-supported standard that protects visitors by ensuring that their browsers always connect to a website over HTTPS. HSTS removes the need to redirect users from http:// to https:// URLs. (This redirection is a security risk that HSTS eliminates.)</p>
-<p>HSTS preloading impacts web traffic only. Once a domain is on the HSTS preload list, modern web browsers will enforce HTTPS connections for all websites hosted on the .gov domain. Users will not be able to click through warnings to reach a site. Non-web uses of .gov (email, VPN, APIs, etc.) are not affected.</p>
-
-
-<h2>Acknowledgement of .gov domain requirements</h2>
-
-<p>This question is required.</p>
-
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
-  <div class="usa-form-group">
+{% block form_fields %}
     {% csrf_token %}
+    <fieldset class="usa-fieldset">
+      <legend>
+        <h2>Acknowledgement of .gov domain requirements</h2>
+      </legend>
 
-    {% if forms.0.is_policy_acknowledged.errors %}
-      <div class="usa-form-group usa-form-group--error">
-        {% for error in forms.0.is_policy_acknowledged.errors %}
-          <span class="usa-error-message margin-bottom-1" id="input-error-message" role="alert">
-            {{ error }}
-          </span>
-        {% endfor %}
-        <div class="usa-checkbox"> 
-          {{ forms.0.is_policy_acknowledged|add_class:"usa-checkbox__input"|add_class:"usa-input--error"|attr:"aria-invalid:true"|attr:"required" }}
-          {{ forms.0.is_policy_acknowledged|add_label_class:"usa-checkbox__label usa-label--error" }}
-        </div>
-      </div>
-    {% else %}
-      <div class="usa-checkbox"> 
-        {{ forms.0.is_policy_acknowledged|add_class:"usa-checkbox__input"|attr:"required"}}
-        {{ forms.0.is_policy_acknowledged|add_label_class:"usa-checkbox__label" }}
-      </div>
-    {% endif %}
-  </div>
+      {% input_with_errors forms.0.is_policy_acknowledged %}
 
-  {{ block.super }}
-
-</form>
-
+    </fieldset>
 {% endblock %}
