--- a/src/registrar/templates/application_security_email.html
+++ b/src/registrar/templates/application_security_email.html
@@ -1,30 +1,15 @@
 {% extends 'application_form.html' %}
-{% load widget_tweaks %}
-{% load static %}
+{% load field_helpers %}
 
-{% block form_content %}
+{% block form_instructions %}
+  <p>We strongly recommend that you provide a security email. This email will allow the
+  public to report observed or suspected security issues on your domain.
+  <strong>Security emails are made public.</strong> We recommend using an alias, like
+  security@&lt;domain.gov&gt;.</p>
+{% endblock %}
 
-<p id="instructions"> We strongly recommend that you provide a security email. This email will allow the public to report observed or suspected security issues on your domain. <strong> Security emails are made public.</strong> We recommend using an alias, like security@&lt;domain.gov&gt;.</p>
 
-<form id="step__{{steps.current}}" class="usa-form usa-form--large" method="post" novalidate>
+{% block form_fields %}
   {% csrf_token %}
-
-    {% if forms.0.security_email.errors %}
-      <div class="usa-form-group usa-form-group--error">
-        {{ forms.0.security_email|add_label_class:"usa-label usa-label--error" }}
-        {% for error in forms.0.security_email.errors %}
-          <span class="usa-error-message" id="input-error-message" role="alert">
-            {{ error }}
-          </span>
-        {% endfor %}
-        {{ forms.0.security_email|add_class:"usa-input"|add_class:"usa-input--error"|attr:"aria-describedby:instructions"|attr:"aria-invalid:true" }}
-      </div>
-    {% else %}
-      {{ forms.0.security_email|add_label_class:"usa-label" }}
-      {{ forms.0.security_email|add_class:"usa-input"|attr:"aria-describedby:instructions" }}
-    {% endif %}
-    {{ block.super }}
-
-</form>
-
+  {% input_with_errors forms.0.security_email %}
 {% endblock %}
