Remove dead code

--- a/src/registrar/templates/application_review.html
+++ b/src/registrar/templates/application_review.html
@@ -1,5 +1,5 @@
 {% extends 'application_form.html' %}
-{% load static namespaced_urls %}
+{% load static url_helpers %}
 
 {% block form_fields %}
   {% csrf_token %}
