--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% load static widget_tweaks dynamic_question_tags namespaced_urls %}
+{% load static form_helpers url_helpers %}
 
 {% block title %}Apply for a .gov domain – {{form_titles|get_item:steps.current}}{% endblock %}
 {% block content %}
