--- a/src/registrar/templates/application_sidebar.html
+++ b/src/registrar/templates/application_sidebar.html
@@ -1,4 +1,4 @@
-{% load static namespaced_urls %}
+{% load static url_helpers %}
 
 <div class="margin-bottom-4 tablet:margin-bottom-0">
   <nav aria-label="Form steps,">
