--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -1,6 +1,5 @@
 {% extends 'application_form.html' %}
-{% load static %}
-{% load field_helpers %}
+{% load static field_helpers %}
 
 {% block form_instructions %}
   <p>We’d like to contact other employees with administrative or technical
@@ -12,7 +11,6 @@
 
 
 {% block form_fields %}
-  {% csrf_token %}
   {{ forms.0.management_form }}
   {# forms.0 is a formset and this iterates over its forms #}
   {% for form in forms.0.forms %}
@@ -20,8 +18,6 @@
       <legend>
         <h2>Contact {{ forloop.counter }}</h2>
       </legend>
-
-      {% if form.is_bound %}HAS INITIAL DATA{% else %}NO INITIAL DATA{% endif %}
 
       {% input_with_errors form.first_name %}
 
