--- a/src/registrar/templates/application_done.html
+++ b/src/registrar/templates/application_done.html
@@ -20,7 +20,7 @@
   <h2>Next steps in this process</h2>
 
   <p> We'll review your request. This could take up to two weeks. During
-  this review we'll verify that your</p> 
+  this review we'll verify that your:</p> 
   <ul class="usa-list">
     <li>Organization is eligible for a .gov domain</li>
     <li>Authorizing official approves your request</li> 
