--- a/src/registrar/templates/application_tribal_government.html
+++ b/src/registrar/templates/application_tribal_government.html
@@ -6,7 +6,7 @@
   {% input_with_errors forms.0.tribe_name %}
   <fieldset class="usa-fieldset">
     <legend class="usa-legend">
-      <p>Please check all that apply.
+      <p>Is your organization a federally-recognized tribe or a state-recognized tribe? Check all that apply.
       <abbr class="usa-hint usa-hint--required" title="required">*</abbr></p>
     </legend>
     {% input_with_errors forms.0.federally_recognized_tribe %}
