--- a/src/registrar/templates/application_other_contacts.html
+++ b/src/registrar/templates/application_other_contacts.html
@@ -2,12 +2,7 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>We’d like to contact other employees with administrative or technical
-  responsibilities in your organization. They should be employees of
-  your organization. For example, they could be involved in
-  managing your organization or its technical infrastructure. This information will
-  help us assess your eligibility and understand the purpose of the .gov domain. These
-  contacts should be in addition to you and your authorizing official.</p>
+  <p>We’d like to contact other employees with administrative or technical responsibilities in your organization. For example, they could be involved in managing your organization or its technical infrastructure. This information will help us assess your eligibility and understand the purpose of the .gov domain. These contacts should be in addition to you and your authorizing official. They should be employees of your organization.</p>
 
   <p>We’ll email these contacts to let them know that you made this request.</p>
 {% endblock %}
