Added the alert of it being saved

--- a/src/registrar/templates/application_form.html
+++ b/src/registrar/templates/application_form.html
@@ -18,14 +18,8 @@
         </a>
         {% endif %}
 
-{% block form_save_progress %}
-    {% if form.save %}
-          {% include "includes/save_progress.html" %}
-    {% endif %}
-{% endblock %}
-
-{% block form_test %}
-          {% include "includes/save_progress.html" %}
+{% block form_messages %}
+          {% include "includes/form_messages.html" %}
 {% endblock %}
 
 {% block form_errors %}
