added comment for clarification

--- a/src/registrar/templates/includes/form_messages.html
+++ b/src/registrar/templates/includes/form_messages.html
@@ -1,3 +1,8 @@
+{% comment %}
+there are a message code thats already in the base.html. need to follow up 
+with other engineers about this.
+{% endcomment %}
+
 {% if messages %}
 {% for message in messages %}
    <div class="usa-alert usa-alert--{{ message.tags }} usa-alert--slim margin-bottom-2">
