--- a/src/registrar/templates/application_anything_else.html
+++ b/src/registrar/templates/application_anything_else.html
@@ -5,6 +5,10 @@
   <p>Is there anything else we should know about your domain request?</p>
 {% endblock %}
 
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
+{% endblock %}
+
 
 {% block form_fields %}
   {% with add_label_class="usa-sr-only" attr_maxlength=500 %}
