--- a/src/registrar/templates/application_current_sites.html
+++ b/src/registrar/templates/application_current_sites.html
@@ -2,16 +2,21 @@
 {% load static field_helpers %}
 
 {% block form_instructions %}
-  <p>Enter your organization’s public website, if you have one. For example,
+  <p>Enter your organization’s current public website, if you have one. For example,
   www.city.com.</p>
 {% endblock %}
 
+{% block form_required_fields_help_text %}
+{# empty this block so it doesn't show on this page #}
+{% endblock %}
 
 {% block form_fields %}
   {{ forms.0.management_form }}
 
   {% for form in forms.0 %}
+  {% with add_label_class="usa-sr-only" %}
     {% input_with_errors form.website %}
+  {% endwith %} 
   {% endfor %}
 
   <button type="submit" name="submit_button" value="save" class="usa-button usa-button--unstyled">
