--- a/src/registrar/templates/application_dotgov_domain.html
+++ b/src/registrar/templates/application_dotgov_domain.html
@@ -27,6 +27,11 @@
 {% endblock %}
 
 
+{% block form_required_fields_help_text %}
+{# empty this block so it doesn't show on this page #}
+{% endblock %}
+
+
 {% block form_fields %}
 
   {{ forms.0.management_form }}
@@ -41,9 +46,11 @@
     these initial checks, we’ll verify that it meets all of our requirements once you
     complete and submit the rest of this form.</p>
 
+    <p class="text-semibold">This question is required.</p>
+
     {% with attr_aria_describedby="domain_instructions domain_instructions2" %}
       {# attr_validate / validate="domain" invokes code in get-gov.js #}
-      {% with www_gov=True attr_validate="domain" %}
+      {% with www_gov=True attr_validate="domain" add_label_class="usa-sr-only" %}
         {% input_with_errors forms.0.requested_domain %}
       {% endwith %}
     {% endwith %}
