--- a/src/registrar/templates/application_org_federal.html
+++ b/src/registrar/templates/application_org_federal.html
@@ -5,11 +5,17 @@
   <h2 class="margin-bottom-5">
     Which federal branch is your organization in?
   </h2>
+
+  <p class="text-semibold">This question is required.</p>
+{% endblock %}
+
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
 {% endblock %}
 
 
 {% block form_fields %}
-  {% with add_class="usa-radio__input--tile" %}
+  {% with add_class="usa-radio__input--tile"  add_legend_class="usa-sr-only" %}
     {% input_with_errors forms.0.federal_type %}
   {% endwith %}
 {% endblock %}
