--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -10,11 +10,18 @@
   domain. Will you use it for a website and/or email? Are you moving your website from
   another top-level domain (like .com or .org)? Read about <a href="{% url 'todo' %}">activities that
   are prohibited on .gov domains.</a></p>
+
+  <p class="text-semibold">This question is required.</p>
+{% endblock %}
+
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
 {% endblock %}
 
 
+
 {% block form_fields %}
-    {% with attr_maxlength=500 %}
+    {% with attr_maxlength=500 add_label_class="usa-sr-only" %}
       {% input_with_errors forms.0.purpose %}
     {% endwith %}
 {% endblock %}
