--- a/src/registrar/templates/application_security_email.html
+++ b/src/registrar/templates/application_security_email.html
@@ -8,7 +8,13 @@
   security@&lt;domain.gov&gt;.</p>
 {% endblock %}
 
+{% block form_required_fields_help_text %}
+{# commented out so it does not appear on this page #}
+{% endblock %}
+
 
 {% block form_fields %}
+{% with add_label_class="usa-sr-only" %}
   {% input_with_errors forms.0.security_email %}
+{% endwith %}
 {% endblock %}
