--- a/src/registrar/templates/base.html
+++ b/src/registrar/templates/base.html
@@ -167,9 +167,11 @@
     {% if messages %}
     <ul class="messages">
       {% for message in messages %}
+      {% if 'base' in message.extra_tags %}
       <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>
         {{ message }}
         </li>
+        {% endif %}
         {% endfor %}
     </ul>
     {% endif %}
