Added text to clarify that managing elections should be primary purpose of office

--- a/src/registrar/templates/application_org_election.html
+++ b/src/registrar/templates/application_org_election.html
@@ -5,6 +5,7 @@
   <h2 class="margin-bottom-05">
     Is your organization an election office?
   </h2>
+<p>Answer “yes” if the primary purpose of your organization is to manage elections.</p>
 {% endblock %}
 
 
