Added question about audience to align with new requirements

--- a/src/registrar/templates/application_purpose.html
+++ b/src/registrar/templates/application_purpose.html
@@ -2,14 +2,13 @@
 {% load field_helpers %}
 
 {% block form_instructions %}
-  <p>.Gov domain names are intended for use on the internet. They should be registered
-  with an intent to deploy services, not simply to reserve a name. .Gov domains should
-  not be registered for primarily internal use.</p>
+  <p>.Gov domain names are for use on the internet. Don’t register a .gov to simply reserve a 
+domain name or for mainly internal use.</p>
 
-  <p>Describe the reason for your domain request. Explain how you plan to use this
-  domain. Will you use it for a website and/or email? Are you moving your website from
-  another top-level domain (like .com or .org)? Read about <a href="{% url 'todo' %}">activities that
-  are prohibited on .gov domains.</a></p>
+  <p>Describe the reason for your domain request. Explain how you plan to use this domain. 
+Who is your intended audience? Will you use it for a website and/or email? Are you moving 
+your website from another top-level domain (like .com or .org)? 
+Read about <a href="{% url 'todo' %}">activities that are prohibited on .gov domains.</a></p>
 {% endblock %}
 
 
